# FfmpegLearn

./: README.md  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/edu/tyut/ffmpeglearn/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/aidl/edu/tyut/ffmpeglearn/: IBookManager.aidl
app/src/main/aidl/edu/tyut/ffmpeglearn/bean/: Book.aidl
app/src/main/cpp/: CMakeLists.txt  ffmpegLearn.cpp  sRTGenerator.cpp
app/src/main/cpp/ffmpeg/libavutil/: ffversion.h
app/src/main/cpp/include/: FFmpegDecoder.hpp  Mp3Encoder.hpp  OpenGLLearn.hpp  OpenSLLearn.hpp  ffmpegLearn.hpp  logging.hpp  sRTGenerator.hpp  transcode.hpp
app/src/main/cpp/src/: FFmpegDecoder.cpp  Mp3Encoder.cpp  OpenGLLearn.cpp  OpenSLLearn.cpp  sRTGenerator.cpp  transcode.cpp
app/src/main/java/edu/tyut/ffmpeglearn/bean/: Book.kt  Person.kt
app/src/main/java/edu/tyut/ffmpeglearn/binder/: BookManager2Impl.kt  IBookManager2.kt
app/src/main/java/edu/tyut/ffmpeglearn/manager/: AudioRecordManager.kt  CaptureManager.kt
app/src/main/java/edu/tyut/ffmpeglearn/route/: Routes.kt
app/src/main/java/edu/tyut/ffmpeglearn/service/: HelloService.kt
app/src/main/java/edu/tyut/ffmpeglearn/ui/activity/: MainActivity.kt
app/src/main/java/edu/tyut/ffmpeglearn/ui/screen/: CameraScreen.kt  GreetingScreen.kt  HelloScreen.kt  Mp3Screen.kt  Mp4Screen.kt  NavScreen.kt  PlayerScreen.kt  ServiceScreen.kt  SurfaceScreen.kt
app/src/main/java/edu/tyut/ffmpeglearn/ui/theme/: Color.kt  Shape.kt  Theme.kt  Type.kt
app/src/main/java/edu/tyut/ffmpeglearn/utils/: Utils.kt
app/src/main/jniLibs/arm64-v8a/: libfreetype.la  libfribidi.la  libmp3lame.la
app/src/main/jniLibs/arm64-v8a/pkgconfig/: freetype2.pc  fribidi.pc  harfbuzz-subset.pc  harfbuzz.pc  libavcodec.pc  libavdevice.pc  libavfilter.pc  libavformat.pc  libavutil.pc  libmp3lame.pc  libpostproc.pc  libswresample.pc  libswscale.pc  x264.pc
app/src/main/jniLibs/armeabi-v7a/: libfreetype.la  libfribidi.la  libmp3lame.la
app/src/main/jniLibs/armeabi-v7a/pkgconfig/: freetype2.pc  fribidi.pc  harfbuzz-subset.pc  harfbuzz.pc  libavcodec.pc  libavdevice.pc  libavfilter.pc  libavformat.pc  libavutil.pc  libmp3lame.pc  libpostproc.pc  libswresample.pc  libswscale.pc  x264.pc
app/src/main/jniLibs/x86/: libfreetype.la  libfribidi.la  libmp3lame.la
app/src/main/jniLibs/x86/pkgconfig/: freetype2.pc  fribidi.pc  harfbuzz-subset.pc  harfbuzz.pc  libavcodec.pc  libavdevice.pc  libavfilter.pc  libavformat.pc  libavutil.pc  libmp3lame.pc  libpostproc.pc  libswresample.pc  libswscale.pc  x264.pc
app/src/main/jniLibs/x86_64/: libfreetype.la  libfribidi.la  libmp3lame.la
app/src/main/jniLibs/x86_64/cmake/harfbuzz/: harfbuzz-config.cmake
app/src/main/jniLibs/x86_64/pkgconfig/: freetype2.pc  fribidi.pc  harfbuzz-subset.pc  harfbuzz.pc  libavcodec.pc  libavdevice.pc  libavfilter.pc  libavformat.pc  libavutil.pc  libmp3lame.pc  libpostproc.pc  libswresample.pc  libswscale.pc  x264.pc
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/xml/: file_paths.xml
app/src/test/java/edu/tyut/ffmpeglearn/: ExampleUnitTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
